Working on IE7 incompatibility issue
This seems to be a site-wide problem that also appears on several pages
such as CFE Staff (not sure whether IE8 has the same problem)

--- a/sites/all/themes/cfe/css/styles.css
+++ b/sites/all/themes/cfe/css/styles.css
@@ -358,12 +358,16 @@ header {
 	padding: 0;
 	z-index: 110;
 	zoom: 1;
+	-ms-zoom: 1;
 }
 #navigation .menu li {
-	display: inline;
+	display: block;
 	float: left;
 	position: relative;
 	margin: 0;
+}
+#navigation li a {
+	background-color: #fff;
 }
 #navigation li a:hover,
 #navigation li a:active,
@@ -387,10 +391,11 @@ header {
 	transition: all .2s ease-in-out;
 	background: #FFF;
 	box-shadow: 0 0 5px #444;
+	width: 198px;
 	z-index: 110;
 }
 #navigation ul li:hover ul li {
-	/*clear: left;*/
+	/* clear: left; */
 	text-decoration: none;
 	margin: 0;
 	padding: 0;
